...
    undo: 'Undo',
    phone: 'Phone',
    password: 'Password',
    next: 'Next',
    skip: 'Skip',
    done: 'Done',
    ok: 'OK',
    error: 'Error',
    name: 'Name',
    years: 'years',
    daysShort: 'd.',
    skipToContent: 'Skip to content',
    moreDetails: 'Details',
...
